[tool.poetry]
name = "webpy-hw11"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "webpy_hw11"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.3"
alembic = "^1.9.3"
psycopg2-binary = "^2.9.5"
pydantic = {extras = ["email"], version = "^1.10.4"}
datetime = "^5.0"
fastapi = "^0.91.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
